# heisenberg

./: .clang-format  .clangd  .cursorignore  .gitignore  CMakeCache.txt  CMakeLists.txt  CcSimpleMR.h  CcTradeHandler.h  Ccex.cpp  Ccex.h  CcexOrderExecutor.cpp  CcexOrderExecutor.h  DataStreamer.cpp  DataStreamer.h  Exchange.h  LICENSE  MarketDataAdapter.cpp  MarketDataAdapter.h  OrderExecutor.h  README.md  SIOPocoDataStreamer.cpp  SIOPocoDataStreamer.h  SIOPocoSimpleMR.h  SIOPocoTradeStream.h  SimpleMR.cpp  SimpleMR.h  SimpleMeanReversionAlgo.cpp  SimpleMeanReversionAlgo.h  TalibMeanReversion.cpp  TalibMeanReversion.h  TradeStreamMaker.h  UserAdapter.cpp  UserAdapter.h  WSCcTradeStream.h  abstracted_algo.cpp  abstracted_streamer.cpp  algo_example.cpp  ccapi_execution_example.cpp  conanfile.py  conanfile.txt  (+19 more)
.conan/profiles/: default
.conan/profiles/clang/15/: compiler  x64-libc++-debug
.conan/profiles/compiler/: clang  gcc  msvc
.conan/profiles/gcc/12/: compiler  x64-libstdc++11-debug
.conan/profiles/msvc/193/: compiler  x64-release
.conan/profiles/msvc/194/: compiler  x64-release
.conan/profiles/os/: current
.conan/profiles/stl/: libc++  libstdc++11
.cursor/: settings.json
.cursor/rules/: cpp-clangd-cursor.md
.github/workflows/: cmake.yml
ccapi_executor/: CMakeLists.txt  CcexOrderExecutor.cpp  CcexOrderExecutor.h  Exchange.h  OrderExecutor.h
cmake/: clang_format.cmake  cpp_crypto_algos_config.hpp.in
docs/: ccex-order-executor.md  cpp-ide-cursor-vscode.md
enc_temp_folder/f581d97a9599c6f745e1b4b02b777a5/: UserAdapter.h
example/: package.json  server.js
scripts/: build-release-debug.sh
src/: .clang-format  CMakeLists.txt  SIOClient.cpp  SIOClientImpl.cpp  SIOClientRegistry.cpp  SIOEventRegistry.cpp  SIONotificationHandler.cpp  SIOPacket.cpp  algo.hpp  cc_damped_mr.hpp  cc_kaufman.hpp  cc_simple_mr.hpp  cc_trade_handler.hpp  cc_trade_stream.hpp  ccex_order_executor.hpp  damped_mr.hpp  enum.hpp  exchange.hpp  exchange_names.hpp  is_string.hpp  order_executor.hpp  order_type.hpp  program_options.hpp  sandbox_order_executor.hpp  side.hpp  trade_data.hpp  trade_stream.hpp  trade_stream_exception.hpp  trade_stream_maker.hpp  utils.hpp  wscc_trade_stream.hpp
src/apps/: CMakeLists.txt
src/apps/algo/: CMakeLists.txt  abstracted_algo.cpp  algo.cpp
src/apps/execute_order/: CMakeLists.txt  execute_ccex_order.cpp  execute_order.cpp
src/apps/experiment/: CMakeLists.txt  experiment.cpp
src/apps/streamer/: CMakeLists.txt  abstracted_streamer.cpp  streamer.cpp
src/include/: SIOClient.h  SIOClientImpl.h  SIOEventRegistry.h  SIOEventTarget.h  SIONotificationHandler.h  SIONotifications.h  SIOPacket.h
talks/antony/: README.md
talks/jahan/: README.md
talks/rainer/: README.md
talks/rainer/Concepts/: account1.cpp  account2.cpp  account3.cpp  account4.cpp  account5.cpp  account6.cpp
talks/rainer/ExtendPythonWithCpp/Embed/: myMath.py  runPythonFunction.c
talks/rainer/ExtendPythonWithCpp/Extend/Native/: setup.py
talks/rainer/ExtendPythonWithCpp/Extend/SWIG/: helloWorld.c  helloWorld.h  helloWorld.i  setup.py
talks/rainer/ExtendPythonWithCpp/Extend/SharedLibrary/: helloWorld.c  helloWorld.h  main.c
talks/rainer/ExtendPythonWithCpp/Extend/pybind11/: function.cpp  human.cpp
talks/rainer/Ranges/: begin.cpp  rangesComposition.cpp  rangesEntireContainer.cpp  rangesFilterTransform.cpp  rangesLazy.cpp
talks/richard/: README.md
tests/: CMakeLists.txt  test_e2e_sandbox.cpp  test_enum.cpp  test_exchange_names.cpp  test_order_completion.cpp  test_utils.cpp
trade_stream/: CMakeLists.txt  SIOClientImpl.cpp  SIOClientRegistry.cpp
trade_stream/include/: SIOClientRegistry.h  SIONotifications.h  SIOPacket.h
